package NYT.NProto;

////////////////////////////////////////////////////////////////////////////////

message TMD5Hasher
{
    required bytes state = 1;
}

////////////////////////////////////////////////////////////////////////////////
